# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.479 2005/12/20 21:14:52 wolf31o2 Exp $

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec:
  Updated example specs with information on cflags/chost/cxxflags/ldflags in
  both stages 1 and 2.

  20 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/stage1_target.py,
  modules/stage2_target.py:
  Disable reading of CHOST/CFLAGS/CXXFLAGS/LDFLAGS from the environment. Allow
  stage1 to be overridden again.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh:
  It looks like gcc-config/binutils-config needs to be run with the full path,
  since it is run outside of the chroot.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/stage1/stage1-controller.sh:
  Fixed gcc-config calls.  This is 2.0_rc11.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst 2.0_rc10.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/sh.py,
  modules/generic_stage_target.py:
  Updated sh support from Mike Frysinger <vapier@gentoo.org> and closing bug
  #115866.

  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Changed from -z to -n for bug #116180.

  19 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py:
  Detect missing binaries for the hashing functions and abort if not found

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> README,
  files/catalyst.conf:
  Updated README to list new requirements. Set default hash as crc32. Set
  default digests as sha1/md5.

  19 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst, files/catalyst.conf,
  modules/catalyst_support.py, modules/generic_stage_target.py,
  modules/livecd_stage2_target.py, modules/stage2_target.py: