@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.103 2005/12/20 16:28:03 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.104 2005/12/20 22:44:45 rocket Exp $
 
 """
 This class does all of the chroot setup, copying of files, etc. It is
@@ -117,6 +117,7 @@ class generic_stage_target(generic_target):
 		# define all of our core variables
 		self.set_target_profile()
 		self.set_target_subpath()
+		self.set_source_subpath()
 
 		# set paths
 		self.set_snapshot_path()
@@ -239,6 +240,16 @@ class generic_stage_target(generic_target):
 	def set_target_subpath(self):
 		self.settings["target_subpath"]=self.settings["rel_type"]+"/"+self.settings["target"]+\
 			"-"+self.settings["subarch"]+"-"+self.settings["version_stamp"]
+	
+        def set_source_subpath(self):
+                if type(self.settings["source_subpath"]) != types.StringType:
+			print "WARNING WARNING WARNING"
+			print "source_subpath should have been a string perhaps you have something wrong"
+			print "\tin your spec file"
+			print "\tUsing first element of array .. continuing .. other values may not"
+			print "\tbe set as we are discarding extraneous specfile data"
+			print "WARNING WARNING WARNING"
+                        self.settings["source_subpath"]=self.settings["source_subpath"][0]
 
 	def set_pkgcache_path(self):
 		self.settings["pkgcache_path"]=normpath(self.settings["storedir"]+"/packages/"+\
