@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.479 2005/12/20 21:14:52 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.480 2005/12/20 22:44:45 rocket Exp $
+
+  20 Dec 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Fix for source_subpath bug
 
   20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   examples/generic_stage_template.spec:
